objects/tspa__Visual_Remote_Assistant_VJ_Invites__c.object
<CustomObject>
    <fields>
        <fullName>tspa__Alias__c</fullName>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Client_Language__c</fullName>
        <label>Client Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Mobile_Url__c</fullName>
        <label>Mobile Url</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Refrenced_Id__c</fullName>
        <label>Refrenced Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Request_Id__c</fullName>
        <label>Request Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Id__c</fullName>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Status_of_VJ__c</fullName>
        <label>Status of VJ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Tablet_URL__c</fullName>
        <label>Tablet URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__VJ_Job_Type__c</fullName>
        <label>VJ Job Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Visual Remote Assistant-VJ Invite</label>
    <listViews>
        <fullName>tspa__All</fullName>
        <columns>NAME</columns>
        <columns>tspa__Request_Id__c</columns>
        <columns>tspa__Session_Id__c</columns>
        <columns>tspa__Status_of_VJ__c</columns>
        <columns>tspa__VJ_Job_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VJ-{000000000}</displayFormat>
        <label>Visual Remote Assistant-VJ Invites Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant-VJ Invites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>